--- a/.travis.yml
+++ b/.travis.yml
@@ -9,3 +9,9 @@ before_script: pip install docker-compose
 
 script:
   - docker-compose up --build
+
+after_script:
+  - curl localhost:4200
+  - curl localhost:3000
+  - curl localhost:27017
+  - docker-compose down
