--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,15 +8,23 @@ services:
       - "4200:4200" # specify port forewarding
     volumes:
       - ./angular-client:/app # this will enable changes made to the angular app reflect in the container
+    networks:
+      - front-end
 
   express: #name of the second service
     build: express-server # specify the directory of the Dockerfile
     ports:
       - "3000:3000" #specify ports forewarding
-    links:
-      - database
+    networks:
+      - front-end
+      - back-end
 
   database: # name of the third service
     image: mongo # specify image to build container from
     ports:
       - "27017:27017" # specify port forewarding
+    networks:
+      - back-end
+networks:
+  front-end:
+  back-end:
