Added build context to compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,8 @@ version: '2' # specify docker-compose version
 # Define the services/containers to be run
 services:
   angular: # name of the first service
-    build: angular-client # specify the directory of the Dockerfile
+    build:
+      context: ./angular-client
     ports:
       - "4200:4200" # specify port forewarding
     volumes:
@@ -12,7 +13,8 @@ services:
       - front-end
 
   express: #name of the second service
-    build: express-server # specify the directory of the Dockerfile
+    build:
+      context: ./express-server
     ports:
       - "3000:3000" #specify ports forewarding
     networks:
