--- a/angular-client/Dockerfile
+++ b/angular-client/Dockerfile
@@ -8,13 +8,13 @@ RUN mkdir -p /app
 WORKDIR /app
 
 # Copy dependency definitions
-COPY package*.json /app/
+COPY package.json /app
 
 # Install dependecies
 RUN npm install
 
 # Get all the code needed to run the app
-COPY . /app/
+COPY . /app
 
 # Expose the port the app runs in
 EXPOSE 4200
