--- a/angular-client/package.json
+++ b/angular-client/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "~8.0.1",
     "@angular/platform-browser-dynamic": "~8.0.1",
     "@angular/router": "~8.0.1",
+    "babylonjs": "^4.2.0",
     "hammerjs": "^2.0.8",
     "phaser": "^3.24.1",
     "rxjs": "~6.4.0",
