Everything seems to be working

--- a/angular-client/angular.json
+++ b/angular-client/angular.json
@@ -121,5 +121,8 @@
       }
     }
   },
-  "defaultProject": "angular-client"
+  "defaultProject": "angular-client",
+  "cli": {
+    "analytics": false
+  }
 }
