BabylonJS seems to be working now with namespaces

--- a/angular-client/tsconfig.json
+++ b/angular-client/tsconfig.json
@@ -16,7 +16,7 @@
     "typeRoots": [
       "node_modules/@types"
     ],
-    "types": ["babylonjs"],
+    "types": [],
     "lib": [
       "es2018",
       "dom",
