Added some more babylon namespaces for future use

--- a/angular-client/package.json
+++ b/angular-client/package.json
@@ -22,6 +22,13 @@
     "@angular/platform-browser-dynamic": "~11.0.9",
     "@angular/router": "~11.0.9",
     "@babylonjs/core": "^4.2.0",
+    "@babylonjs/gui": "^4.2.0",
+    "@babylonjs/inspector": "^4.2.0",
+    "@babylonjs/loaders": "^4.2.0",
+    "@babylonjs/materials": "^4.2.0",
+    "@babylonjs/post-processes": "^4.2.0",
+    "@babylonjs/procedural-textures": "^4.2.0",
+    "@babylonjs/serializers": "^4.2.0",
     "@babylonjs/viewer": "^4.2.0",
     "phaser": "^3.52.0",
     "rxjs": "~6.6.3",
