FINALLY integrated the Babylon Inspector and fixed the peer dependency bugs/docker memory allocation bugs

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
       context: ./angular-client
     ports:
       - "4200:4200" # specify port forewarding
+    environment:
+      NODE_OPTIONS: "--max-old-space-size=1536" # SOLVED: FATAL ERROR: Ineffective mark-compacts near heap limit Allocation failed - JavaScript heap out of memory
     volumes:
       - ./angular-client/src:/app/src # this will enable changes made to the angular app reflect in the container
     networks:
