--- a/angular-client/package.json
+++ b/angular-client/package.json
@@ -44,6 +44,8 @@
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
