Created a Dockerfile.prod for express server and a Express.yml kubectl file for deployment. Modified the name of the angular Dockerfile.production to Dockerfile.prod. Removed some dead code in express-server. Commented out mongoose to prevent error so that Docker could build. Will revert later. Modifed express-server package.json to have a new script for Dockerfile.prod

--- a/express-server/package.json
+++ b/express-server/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "start": "nodemon server/server.js",
+    "deploy": "node server/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
