--- a/angular-client/Dockerfile.prod
+++ b/angular-client/Dockerfile.prod
@@ -11,7 +11,7 @@ WORKDIR /app
 COPY package*.json /app/
 
 # Install dependecies
-RUN npm install
+RUN npm install --production
 
 # Get all the code needed to run the app
 COPY . /app/
