--- a/angular-client/Dockerfile.prod
+++ b/angular-client/Dockerfile.prod
@@ -16,14 +16,14 @@ RUN npm install --production
 # Get all the code needed to run the app
 COPY . /app/
 
-ARG configuration=production
-RUN npm run build -- --output-path=./dist/out --configuration $configuration
+# Build a production version of the angular app
+RUN npm run build --max-old-space-size=3072 -- --configuration production
 
 # Stage 1, based on Nginx, to have only the compiled app, ready for production with Nginx
 FROM nginx:latest
 
 #Copy ci-dashboard-dist
-COPY --from=build-stage /app/dist/out/ /usr/share/nginx/html
+COPY --from=build-stage /app/dist/angular-client/ /usr/share/nginx/html
 
 #Copy default nginx configuration
 COPY ./nginx-custom.conf /etc/nginx/conf.d/default.conf
