--- a/angular-client/angular.yml
+++ b/angular-client/angular.yml
@@ -17,6 +17,7 @@ spec:
       containers:
       - name: angular
         image: dwickizer1/mean:angular_prod
+        imagePullPolicy: Always
         ports:
         - containerPort: 80
 ---
