--- a/express-server/package.json
+++ b/express-server/package.json
@@ -3,8 +3,9 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon server/server.js",
-    "deploy": "node server/server.js",
+    "build": "tsc",
+    "start": "ts-node-dev --respawn --transpile-only server/server.ts",
+    "deploy": "tsc && node build/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
@@ -14,5 +15,18 @@
     "lodash": "^4.17.20",
     "mongoose": "^5.9.27",
     "socket.io": "^2.3.0"
+  },
+  "devDependencies": {
+    "@types/body-parser": "^1.19.0",
+    "@types/cors": "^2.8.9",
+    "@types/express": "^4.17.11",
+    "@types/lodash": "^4.14.168",
+    "@types/mongoose": "^5.10.3",
+    "@types/node": "^14.14.22",
+    "@types/socket.io": "^2.1.12",
+    "ts-node": "^9.1.1",
+    "ts-node-dev": "^1.1.1",
+    "tslint": "^6.1.3",
+    "typescript": "^4.1.3"
   }
 }
