--- a/mongo-db/mongo-configmap.yml
+++ b/mongo-db/mongo-configmap.yml
@@ -4,4 +4,5 @@ metadata:
   name: mongodb-configmap
 data: 
   database_url: mongodb://mongodb-service/mean
+  databse_name: mean
   service: mongodb-service
