Fixed a Windows bug where Windows line endings would be inserted to a bash script. Solved by stripping the file of any windows characters via a RUN command in the express Dockerfile

--- a/express-server/Dockerfile
+++ b/express-server/Dockerfile
@@ -4,9 +4,10 @@ FROM node:latest
 # Create a directory where our app will be placed
 RUN mkdir -p /usr/src/app
 
-# Force Express/Node to wait for Mongo DB to initialize
+# Force Express/Node to wait for Mongo DB to initialize and sanitize the script from Windows line endings
 COPY ./wait-for-it/wait-for-it.sh /usr/wait-for-it.sh
 RUN chmod +x /usr/wait-for-it.sh
+RUN sed -i.bak 's/\r$//' /usr/wait-for-it.sh
 
 # Change directory so that our commands run inside this new directory
 WORKDIR /usr/src/app
