--- a/angular-client/package.json
+++ b/angular-client/package.json
@@ -43,6 +43,8 @@
     "@angular/language-service": "~11.0.9",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/jest": "^26.0.20",
+    "@types/mocha": "^8.2.0",
     "@types/node": "^14.14.22",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
