Weapon swap working. Still need to solve rotation bug

--- a/angular-client/Dockerfile
+++ b/angular-client/Dockerfile
@@ -10,6 +10,9 @@ WORKDIR /app
 # Copy dependency definitions
 COPY package*.json /app/
 
+# Handle proxy error
+RUN npm config set registry http://registry.npmjs.org/
+
 # Install dependecies
 RUN npm install
 
