--- a/angular-client/package.json
+++ b/angular-client/package.json
@@ -30,6 +30,7 @@
     "@babylonjs/procedural-textures": "^4.2.0",
     "@babylonjs/serializers": "^4.2.0",
     "@babylonjs/viewer": "^4.2.0",
+    "dat.gui": "^0.7.7",
     "material-design-icons": "^3.0.1",
     "phaser": "^3.52.0",
     "rxjs": "~6.6.3",
@@ -43,6 +44,7 @@
     "@angular/cli": "~11.0.7",
     "@angular/compiler-cli": "~11.0.9",
     "@angular/language-service": "~11.0.9",
+    "@types/dat.gui": "^0.7.6",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/jest": "^26.0.20",
