--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,11 @@
-language: python
-python:
-  - "3.7"
+# language: python
+# python:
+#   - "3.7"
 
-services:
-  - docker
+# services:
+#   - docker
 
-before_script: pip install docker-compose
+# before_script: pip install docker-compose
 
-script:
-  - docker-compose up --build
+# script:
+#   - docker-compose up --build
