--- a/express-server/package.json
+++ b/express-server/package.json
@@ -12,17 +12,21 @@
     "body-parser": "~1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "mongoose": "^5.9.27",
+    "passport-jwt": "^4.0.0",
     "socket.io": "^2.4.0"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.0",
     "@types/cors": "^2.8.9",
     "@types/express": "^4.17.11",
+    "@types/jsonwebtoken": "^8.5.4",
     "@types/lodash": "^4.14.168",
     "@types/mongoose": "^5.10.3",
     "@types/node": "^14.14.22",
+    "@types/passport-jwt": "^3.0.6",
     "@types/socket.io": "^2.1.12",
     "ts-node": "^9.1.1",
     "ts-node-dev": "^1.1.1",
