--- a/express-server/package.json
+++ b/express-server/package.json
@@ -15,6 +15,7 @@
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "mongoose": "^5.9.27",
+    "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "socket.io": "^2.4.0"
   },
@@ -26,6 +27,7 @@
     "@types/lodash": "^4.14.168",
     "@types/mongoose": "^5.10.3",
     "@types/node": "^14.14.22",
+    "@types/passport": "^1.0.7",
     "@types/passport-jwt": "^3.0.6",
     "@types/socket.io": "^2.1.12",
     "ts-node": "^9.1.1",
