Dockerized colyseus-chat. Proof of concept for communicating between express and colyseus

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,6 +30,21 @@ services:
       - database
     command: bash -c "/usr/wait-for-it.sh --timeout=0 database:27017 && npm start" # wait for the database to finish initializing
 
+  colyseus-chat: #name of the second service
+    build:
+      context: ./colyseus-chat
+      dockerfile: Dockerfile
+    ports:
+      - "2567:2567" #specify ports forewarding
+    volumes:
+      - ./colyseus-chat/src:/usr/src/app/src # this will enable changes made to the express app reflect in the container
+    networks:
+      - front-end
+      - back-end
+    depends_on:
+      - database
+    command: bash -c "/usr/wait-for-it.sh --timeout=0 database:27017 && npm start" # wait for the database to finish initializing
+
   mongo-express: # name of the third service
     image: mongo-express # specify image to build container from
     ports:
