--- a/express-server/package.json
+++ b/express-server/package.json
@@ -14,8 +14,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
-    "mongoose": "^5.9.27",
-    "socket.io": "^2.4.0"
+    "mongoose": "^5.9.27"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.0",
@@ -25,7 +24,6 @@
     "@types/lodash": "^4.14.168",
     "@types/mongoose": "^5.10.3",
     "@types/node": "^14.14.22",
-    "@types/socket.io": "^2.1.12",
     "ts-node": "^9.1.1",
     "ts-node-dev": "^1.1.1",
     "tslint": "^6.1.3",
