--- a/angular-client-upgrade/package.json
+++ b/angular-client-upgrade/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^14.2.0",
     "@babylonjs/core": "^5.31.2",
     "@babylonjs/gui": "^5.31.2",
+    "@babylonjs/inspector": "^5.31.2",
     "cannon": "^0.6.2",
     "cannon-es": "^0.20.0",
     "colyseus.js": "^0.14.13",
