express-server-upgrade seems to be working

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,25 +4,25 @@ version: '2' # specify docker-compose version
 services:
   angular: # name of the first service
     build:
-      context: ./angular-client
+      context: ./angular-client-upgrade
       dockerfile: Dockerfile
     ports:
       - "4200:4200" # specify port forewarding
     environment:
       NODE_OPTIONS: "--max-old-space-size=4000" # SOLVED: FATAL ERROR: Ineffective mark-compacts near heap limit Allocation failed - JavaScript heap out of memory
     volumes:
-      - ./angular-client/src:/app/src # this will enable changes made to the angular app reflect in the container
+      - ./angular-client-upgrade/src:/app/src # this will enable changes made to the angular app reflect in the container
     networks:
       - front-end
 
   express: #name of the second service
     build:
-      context: ./express-server
+      context: ./express-server-upgrade
       dockerfile: Dockerfile
     ports:
       - "3000:3000" #specify ports forewarding
     volumes:
-      - ./express-server/server:/usr/src/app/server # this will enable changes made to the express app reflect in the container
+      - ./express-server-upgrade/server:/usr/src/app/server # this will enable changes made to the express app reflect in the container
     networks:
       - front-end
       - back-end
