--- a/express-server-upgrade/package.json
+++ b/express-server-upgrade/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
-    "start": "ts-node-dev --respawn --transpile-only server/server.ts",
+    "start": "ts-node-dev --respawn --transpile-only --poll server/server.ts",
     "deploy": "tsc && node build/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
