--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,6 +47,7 @@ services:
 
   mongo-express: # name of the third service
     image: mongo-express # specify image to build container from
+    restart: always # needed in case MongoDb connection is not ready
     ports:
       - "8081:8081" # specify port forewarding
     environment: 
