--- a/colyseus-chat-upgrade/package.json
+++ b/colyseus-chat-upgrade/package.json
@@ -5,7 +5,7 @@
   "description": "npm init template for bootstrapping an empty Colyseus project",
   "main": "lib/index.js",
   "scripts": {
-    "start": "ts-node-dev --respawn --transpile-only src/index.ts",
+    "start": "ts-node-dev --respawn --transpile-only --poll src/index.ts",
     "loadtest": "colyseus-loadtest loadtest/example.ts --room my_room --numClients 2",
     "build": "npm run clean && tsc && node node_modules/copyfiles/copyfiles package.json ./lib && node node_modules/copyfiles/copyfiles arena.env ./lib",
     "clean": "node node_modules/rimraf/bin lib",
@@ -22,6 +22,7 @@
     "@colyseus/testing": "^0.14.21",
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.1",
+    "@types/jsonwebtoken": "^8.5.9",
     "@types/mocha": "^8.2.3",
     "copyfiles": "^2.4.1",
     "mocha": "^9.0.2",
@@ -33,8 +34,9 @@
   "dependencies": {
     "@colyseus/arena": "^0.14.22",
     "@colyseus/monitor": "^0.14.20",
-    "colyseus": "^0.14.20",
+    "colyseus": "^0.14.17",
     "cors": "^2.8.5",
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "jsonwebtoken": "^8.5.1"
   }
 }
