--- a/angular-client/package.json
+++ b/angular-client/package.json
@@ -20,9 +20,10 @@
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
-    "@babylonjs/core": "^5.31.2",
-    "@babylonjs/gui": "^5.31.2",
-    "@babylonjs/inspector": "^5.31.2",
+    "@babylonjs/core": "^5.33.0",
+    "@babylonjs/gui": "^5.33.0",
+    "@babylonjs/inspector": "^5.33.0",
+    "babylonjs": "^5.33.0",
     "cannon": "^0.6.2",
     "cannon-es": "^0.20.0",
     "colyseus.js": "^0.14.13",
