--- a/colyseus-social/package.json
+++ b/colyseus-social/package.json
@@ -1,6 +1,6 @@
 {
   "private": true,
-  "name": "colyseus-chat",
+  "name": "colyseus-social",
   "version": "1.0.0",
   "description": "npm init template for bootstrapping an empty Colyseus project",
   "main": "lib/index.js",
