--- a/colyseus-social/package.json
+++ b/colyseus-social/package.json
@@ -9,7 +9,12 @@
     "loadtest": "colyseus-loadtest loadtest/example.ts --room my_room --numClients 2",
     "build": "npm run clean && tsc && node node_modules/copyfiles/copyfiles package.json ./lib && node node_modules/copyfiles/copyfiles arena.env ./lib",
     "clean": "node node_modules/rimraf/bin lib",
-    "test": "mocha --require ts-node/register test/**_test.ts --exit --timeout 15000"
+    "test": "mocha --require ts-node/register test/**_test.ts --exit --timeout 15000",
+    "lint": "eslint ./src/**/*.ts",
+    "lint:fix": "npm run lint -- --fix",
+    "prettier:check": "prettier ./src --check",
+    "prettier:write": "prettier ./src --write",
+    "format": "npm run prettier:write && npm run lint:fix"
   },
   "author": "",
   "license": "UNLICENSED",
@@ -24,8 +29,13 @@
     "@types/express": "^4.17.1",
     "@types/jsonwebtoken": "^8.5.9",
     "@types/mocha": "^8.2.3",
+    "@typescript-eslint/eslint-plugin": "^6.5.0",
+    "@typescript-eslint/parser": "^6.5.0",
     "copyfiles": "^2.4.1",
+    "eslint": "^8.48.0",
+    "eslint-config-prettier": "^9.0.0",
     "mocha": "^9.0.2",
+    "prettier": "^3.0.3",
     "rimraf": "^2.7.1",
     "ts-node": "^8.1.0",
     "ts-node-dev": "^1.0.0-pre.63",
