--- a/.github/workflows/express-server-ci.yml
+++ b/.github/workflows/express-server-ci.yml
@@ -14,6 +14,6 @@ jobs:
 
     steps:
     - name: Checkout code
-      uses: actions/checkout@v3
+    - uses: actions/checkout@v3
       
     # Additional steps for Express Server can go here
