--- a/angular-client/package.json
+++ b/angular-client/package.json
@@ -11,6 +11,7 @@
     "lint:fix": "npm run lint -- --fix",
     "prettier:check": "prettier ./src/app --check",
     "prettier:write": "prettier ./src/app --write",
+    "format:check": "npm run prettier:check && npm run lint",
     "format": "npm run prettier:write && npm run lint:fix"
   },
   "private": true,
