--- a/angular-client/package.json
+++ b/angular-client/package.json
@@ -7,7 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "lint": "ng lint",
+    "lint": "ng lint --max-warnings=0",
     "lint:fix": "npm run lint -- --fix",
     "prettier:check": "prettier ./src/app --check",
     "prettier:write": "prettier ./src/app --write",
