--- a/angular-client/.eslintrc.json
+++ b/angular-client/.eslintrc.json
@@ -12,7 +12,7 @@
         "plugin:prettier/recommended"
       ],
       "rules": {
-        "@typescript-eslint/no-explicit-any": ["warn"],
+        "@typescript-eslint/no-explicit-any": "off",
         "@angular-eslint/directive-selector": [
           "error",
           {
