--- a/express-server/.eslintrc.json
+++ b/express-server/.eslintrc.json
@@ -16,7 +16,7 @@
          "node": true
     },
     "rules": {
-        "@typescript-eslint/no-explicit-any": "off",
+        "@typescript-eslint/no-explicit-any": ["warn"],
         "linebreak-style": ["error", "unix"]
     }
 }
