--- a/colyseus-game/.eslintrc.json
+++ b/colyseus-game/.eslintrc.json
@@ -16,6 +16,7 @@
          "node": true
     },
     "rules": {
-        "@typescript-eslint/no-explicit-any": "off"
+        "@typescript-eslint/no-explicit-any": "off",
+        "linebreak-style": ["error", "unix"]
     }
 }
