--- a/angular-client/.eslintrc.json
+++ b/angular-client/.eslintrc.json
@@ -1,9 +1,13 @@
 {
   "root": true,
-  "ignorePatterns": ["projects/**/*"],
+  "ignorePatterns": [
+    "projects/**/*"
+  ],
   "overrides": [
     {
-      "files": ["*.ts"],
+      "files": [
+        "*.ts"
+      ],
       "extends": [
         "eslint:recommended",
         "plugin:@typescript-eslint/recommended",
@@ -29,12 +33,19 @@
             "style": "kebab-case"
           }
         ],
-        "linebreak-style": ["error", "unix"]
+        "linebreak-style": [
+          "error",
+          "unix"
+        ]
       }
     },
     {
-      "files": ["*.html"],
-      "excludedFiles": ["*inline-template-*.component.html"],
+      "files": [
+        "*.html"
+      ],
+      "excludedFiles": [
+        "*inline-template-*.component.html"
+      ],
       "extends": [
         "plugin:@angular-eslint/template/recommended",
         "plugin:prettier/recommended"
@@ -46,8 +57,19 @@
             "parser": "angular"
           }
         ],
-        "linebreak-style": ["error", "unix"]
+        "linebreak-style": [
+          "error",
+          "unix"
+        ]
       }
+    },
+    {
+      "files": [
+        "*.ts"
+      ],
+      "extends": [
+        "plugin:@ngrx/recommended"
+      ]
     }
   ]
 }
