--- a/angular-client/angular.json
+++ b/angular-client/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "angular-client-upgrade": {
+    "angular-client": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/angular-client-upgrade",
+            "outputPath": "dist/angular-client",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -65,10 +65,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "angular-client-upgrade:build:production"
+              "browserTarget": "angular-client:build:production"
             },
             "development": {
-              "browserTarget": "angular-client-upgrade:build:development"
+              "browserTarget": "angular-client:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -76,7 +76,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "angular-client-upgrade:build"
+            "browserTarget": "angular-client:build"
           }
         },
         "test": {
